<resources>
    <string name="app_name">Mensajeria Emergencia</string>
    // Login and register //
    <string name="email_text">Correo electrónico</string>
    <string name="password_text">Contraseña</string>
    <string name="password_confirmation_text">Escriba nuevamente su contraseña</string>
    <string name="first_name_text">Primer nombre</string>
    <string name="second_name_text">Segundo nombre</string>
    <string name="last_name_text">Primer apellido </string>
    <string name="second_surname_text">Segundo apellido </string>
    <string name="birthdate_text">Fecha de nacimiento</string>
    <string name="phone_number_text">Número telefónico</string>
    <string name="login_text">Ingresar</string>
    <string name="register_text">Registrarse</string>
    <string name="aviso_enviado">Su estado ha sido enviado</string>

    // Menú principal //

    <string name="send_alert_text">Avisar como estoy</string>
    <string name="check_contacts_text">Ver como están mis contactos</string>
    <string name="configure_contacts_text">Configurar mis contactos</string>

    // Comunicar estado

    <string name="you_are_good_question_text">¿Te encuentras bien?</string>
    <string name="alert_answer_yes_text">Si</string>
    <string name="alert_answer_no_text">No</string>
    <string name="health_problems_text">Estoy herido</string>
    <string name="infrastructure_problems_text">Se dañó la infraestructura</string>
    <string name="supplies_problems_text">Problemas de suministros</string>
    <string name="panic_problems_text">Estoy en pánico</string>
    <string name="what_is_your_problem_question_text">¿Cuál es tu estado?</string>
    <string name="what_is_your_problem_explanation_text">Puedes marcar más de uno</string>
    <string name="send_text">Enviar</string>

    <string name="location_service_description">Servicio de localización aplicación de mensajería
    </string>

    /// Notificaciones

    <string name="notification_title">¿Estás bien?</string>
    <string name="notification_text_1">Estás cerca de una emergencia </string>
    <string name="notification_text_2">Avísale a tus contactos como te encuentras</string>
    <string name="notification_answer_isOK_text">se encuentra bien</string>
    <string name="notification_answer_notOK_text">tiene problemas</string>
    <string name="notification_answer_body_text">Comprueba su última ubicación y otros detalles</string>



    // VIEW TAGS

    <string name="is_important_button_tag">1</string>

    // Detalle respuesta contacto importante

    <string name="contact_answer_detail_state">Última respuesta</string>
    <string name="contact_answer_detail_location">Ubicación última respuesta</string>
    <string name="title_activity_check_important_contacts">CheckImportantContactsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_sdfadsfa">sdfadsfa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
