<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cl.citiaps.informatica.mensajeriaemergencia.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height= "0dp"
            android:layout_weight="1"
            android:text="@string/email_text"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height= "0dp"
            android:layout_weight="1"
            android:text="@string/password_text"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height= "0dp"
            android:layout_weight="1"
            android:text="@string/password_confirmation_text"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/register_password_confirmation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height= "0dp"
            android:layout_weight="1"
            android:text="@string/first_name_text"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/register_first_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height= "0dp"
            android:layout_weight="1"
            android:text="@string/second_name_text"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/register_second_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height= "0dp"
            android:layout_weight="1"
            android:text="@string/last_name_text"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/register_last_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height= "0dp"
            android:layout_weight="1"
            android:text="@string/second_surname_text"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/register_second_surname_edit_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:inputType="textPersonName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height= "0dp"
            android:layout_weight="1"
            android:text="@string/birthdate_text"
            android:padding="5dp"/>

        <DatePicker
            android:id="@+id/register_birthdate_date_picker"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height= "0dp"
            android:layout_weight="1"
            android:text="@string/phone_number_text"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/register_phone_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:inputType="number"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/register_text"/>



    </LinearLayout>


</ScrollView>
