<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cl.citiaps.informatica.mensajeriaemergencia.activity.MainMenuActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:src="@drawable/logo_texto2"
        style="@style/logoMain"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sendAlertButton"
            style="@style/MainMenuButton"
            android:drawableTop="@drawable/send_alert_icon"
            android:enabled="false"
            android:onClick="toSendAlert"
            android:text="@string/send_alert_text" />

        <Button
            android:id="@+id/checkContactsButton"
            style="@style/MainMenuButton"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:drawableTop="@drawable/check_contacts_icon"
            android:onClick="toCheckImportantContacts"
            android:text="@string/check_contacts_text" />

        <Button
            android:id="@+id/configureContactsButton"
            style="@style/MainMenuButton"
            android:drawableTop="@drawable/configure_contacts"
            android:onClick="toSetImportanContacts"
            android:text="@string/configure_contacts_text" />

    </LinearLayout>

</LinearLayout>
